--- a/InverseProblem/InverseProblem.csproj
+++ b/InverseProblem/InverseProblem.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\DirectProblem\DirectProblem.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Results\8sigmas\" />
+  </ItemGroup>
+
 </Project>
