--- a/InverseProblem/InverseProblem.csproj
+++ b/InverseProblem/InverseProblem.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Results\8SigmasCloseAndNearToWellOtherSigmas\" />
     <Folder Include="Results\8SigmasCloseToWell\" />
     <Folder Include="Results\8SigmasNearToWell\" />
     <Folder Include="Results\8SigmasCloseAndNearToWell\" />
